apps/applications/media/unpackerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      containers:
        - name: unpackerr
          image: ghcr.io/unpackerr/unpackerr
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: downloads-mount
              mountPath: /downloads # Path inside the container
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1026
      volumes:
        - name: downloads-mount
          persistentVolumeClaim:
            claimName: downloads-pvc
